implemented some methods

--- a/cpp_sim/CMakeLists.txt
+++ b/cpp_sim/CMakeLists.txt
@@ -4,3 +4,4 @@ project(basalt_cpp_sim VERSION 0.0.1)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
 
 add_executable(basalt_cpp_sim main.cpp Node.cpp)
+add_executable(test test.cpp Node.cpp)
