creating containers for simu

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -12,7 +12,7 @@ FROM ubuntu
 RUN apt-get update > /dev/null; apt-get upgrade -y > /dev/null;
 
 # --- basic tools
-RUN apt-get install -y build-essential python3 python curl net-tools > /dev/null;
+RUN apt-get install -y build-essential python3 python curl grep net-tools iputils-ping > /dev/null;
 
 # --- pip
 RUN \
@@ -21,10 +21,11 @@ apt-get install -y python3-pip;
 # --- ansible
 RUN pip3 install ansible paramiko argcomplete;
 
-# --- ansible conf file (ansible.cfg)
-ADD ansible.cfg /etc/ansible/ansible.cfg
+# --- ansible config
+ADD ./ansible.cfg /etc/ansible/ansible.cfg
 
 # CMD is the default command that is going to be executed in the startup of every exection.
 # Only the last one is considered. So use it once.
 CMD \
-bash
+ifconfig eth0 | grep inet >> /home/dev/ip_adresses ; \
+sleep 100;
