adding inventory file

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -24,6 +24,9 @@ RUN pip3 install ansible paramiko argcomplete;
 # --- ansible config
 ADD ./ansible.cfg /etc/ansible/ansible.cfg
 
+# --- ansible hosts file
+ADD ./hosts /etc/ansible/hosts
+
 # CMD is the default command that is going to be executed in the startup of every exection.
 # Only the last one is considered. So use it once.
 CMD \
