ssh connection between the main machine and the other hosts

--- a/ansible/Dockerfile_host_machine
+++ b/ansible/Dockerfile_host_machine
@@ -11,6 +11,15 @@ FROM ubuntu
 ENV TZ=Europe/Paris
 ENV DEBIAN_FRONTEND=noninteractive
 
+RUN \
+USER_NAME=peer; \
+USER_PASS=basalt; \
+echo "$USER_PASS" > password.txt; \
+echo "$USER_PASS" >> password.txt; \
+useradd -m "$USER_NAME"; \
+passwd peer < password.txt > /dev/null; 2> /dev/null;\
+rm password.txt;
+
 # Installing
 # --- update & upgrade
 RUN apt-get update > /dev/null; apt-get upgrade -y > /dev/null;
@@ -22,20 +31,11 @@ RUN apt-get install -y build-essential python3 python curl grep net-tools iputil
 RUN \
 apt-get install -y python3-pip;
 
-# --- ssh-client
-RUN apt-get install -y ssh-client;
-
-# --- ansible
-RUN pip3 install ansible paramiko argcomplete;
-
-# --- ansible config
-ADD ./ansible.cfg /etc/ansible/ansible.cfg
-
-# --- ansible hosts file
-ADD ./hosts /etc/ansible/hosts
+# --- ssh server
+RUN apt-get install -y openssh-server > /dev/null;
 
 # CMD is the default command that is going to be executed in the startup of every exection.
 # Only the last one is considered. So use it once.
 CMD \
-ifconfig eth0 | grep inet >> /home/dev/ip_adresses ; \
+/etc/init.d/ssh start; \
 sleep 100;
