ssh connection using rsa keys

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -11,6 +11,16 @@ FROM ubuntu
 ENV TZ=Europe/Paris
 ENV DEBIAN_FRONTEND=noninteractive
 
+# creating user
+RUN \
+USER_NAME=peer; \
+USER_PASS=basalt; \
+echo "$USER_PASS" > password.txt; \
+echo "$USER_PASS" >> password.txt; \
+useradd -m "$USER_NAME"; \
+passwd peer < password.txt > /dev/null; 2> /dev/null;\
+rm password.txt;
+
 # Installing
 # --- update & upgrade
 RUN apt-get update > /dev/null; apt-get upgrade -y > /dev/null;
@@ -23,7 +33,7 @@ RUN \
 apt-get install -y python3-pip;
 
 # --- ssh-client
-RUN apt-get install -y ssh-client;
+RUN apt-get install -y ssh-client sshpass;
 
 # --- ansible
 RUN pip3 install ansible paramiko argcomplete;
@@ -34,8 +44,23 @@ ADD ./ansible.cfg /etc/ansible/ansible.cfg
 # --- ansible hosts file
 ADD ./hosts /etc/ansible/hosts
 
+USER peer
+
 # CMD is the default command that is going to be executed in the startup of every exection.
 # Only the last one is considered. So use it once.
 CMD \
-ifconfig eth0 | grep inet >> /home/dev/ip_adresses ; \
-sleep 100;
+cd ~;\
+echo "basalt" > password.txt; \
+mkdir .ssh; \
+ssh-keygen -t rsa -f "/home/peer/.ssh/id_rsa" -q -P ""; \
+sshpass -f password.txt ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" -o StrictHostKeyChecking=no peer@172.17.0.2; \
+sshpass -f password.txt ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" -o StrictHostKeyChecking=no peer@172.17.0.3; \
+bash
+
+# echo "yes" > ~/password; \
+# echo "basalt" >> ~/password; \
+# mkdir ~/.ssh; \
+# ssh-keygen -t rsa -f "/home/peer/.ssh/id_rsa" -q -P ""; \
+# ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" peer@172.17.0.2 < ~/password; \
+# ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" peer@172.17.0.3 < ~/password; \
+# bash
