--- a/basalt_core/CMakeLists.txt
+++ b/basalt_core/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required(VERSION 3.15.0)
+cmake_minimum_required(VERSION 3.8.0)
 project(basalt VERSION 0.1.0)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
-set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
 
@@ -10,17 +9,27 @@ link_directories(${CMAKE_SOURCE_DIR}/lib)
 
 set(src_dir "${CMAKE_SOURCE_DIR}/src")
 set(core_sources
-    ${src_dir}/NodeId.cpp
-    ${src_dir}/Node.cpp
-    ${src_dir}/basalt.cpp
-    ${src_dir}/misc.cpp
-    ${src_dir}/JOAATHash.cpp
-    ${src_dir}/sha256.cpp
-    ${src_dir}/SHA256Hash.cpp
-    ${src_dir}/SpookyHash.cpp
+${src_dir}/misc.cpp
+${src_dir}/NodeId.cpp
+${src_dir}/Node.cpp
+${src_dir}/basalt.cpp
+${src_dir}/JOAATHash.cpp
+${src_dir}/sha256.cpp
+${src_dir}/SHA256Hash.cpp
+${src_dir}/SpookyHash.cpp
+${src_dir}/llhttp/api.c
+${src_dir}/llhttp/http.c
+${src_dir}/llhttp/llhttp.c
+${src_dir}/HTTPLogger.cpp
 )
+set(CMAKE_CXX_STANDARD 17)
+
+set_source_files_properties(${llhttp_sources} PROPERTIES LANGUAGE CXX)
+# set_source_files_properties(${llhttp_sources} PROPERTIES LANGUAGE CXX)
+
 set(net_sources
     ${src_dir}/net/basalt_net.cpp
+    ${src_dir}/misc.cpp
     ${src_dir}/net/Message.cpp
     ${src_dir}/net/Session.cpp
 )
