rectified HTTP response parsing

--- a/basalt_core/CMakeLists.txt
+++ b/basalt_core/CMakeLists.txt
@@ -3,6 +3,9 @@ project(basalt VERSION 0.1.0)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 include_directories(include)
 
 link_directories(${CMAKE_SOURCE_DIR}/lib)
@@ -22,7 +25,6 @@ ${src_dir}/llhttp/http.c
 ${src_dir}/llhttp/llhttp.c
 ${src_dir}/HTTPLogger.cpp
 )
-set(CMAKE_CXX_STANDARD 17)
 
 set_source_files_properties(${llhttp_sources} PROPERTIES LANGUAGE CXX)
 # set_source_files_properties(${llhttp_sources} PROPERTIES LANGUAGE CXX)
