--- a/basalt_core/CMakeLists.txt
+++ b/basalt_core/CMakeLists.txt
@@ -20,9 +20,6 @@ ${src_dir}/JOAATHash.cpp
 ${src_dir}/sha256.cpp
 ${src_dir}/SHA256Hash.cpp
 ${src_dir}/SpookyHash.cpp
-${src_dir}/llhttp/api.c
-${src_dir}/llhttp/http.c
-${src_dir}/llhttp/llhttp.c
 ${src_dir}/HTTPLogger.cpp
 )
 
@@ -30,10 +27,14 @@ set_source_files_properties(${llhttp_sources} PROPERTIES LANGUAGE CXX)
 # set_source_files_properties(${llhttp_sources} PROPERTIES LANGUAGE CXX)
 
 set(net_sources
+    ${src_dir}/llhttp/api.c
+    ${src_dir}/llhttp/http.c
+    ${src_dir}/llhttp/llhttp.c
     ${src_dir}/net/basalt_net.cpp
     ${src_dir}/misc.cpp
     ${src_dir}/net/Message.cpp
     ${src_dir}/net/Session.cpp
+    ${src_dir}/net/HTTPClient.cpp
 )
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
 
@@ -57,5 +58,5 @@ target_link_libraries(client basalt)
 add_executable(p2p_test p2p_test.cpp)
 target_link_libraries(p2p_test basalt)
 
-add_executable(ranking_tests ranking_tests.cpp)
-target_link_libraries(ranking_tests basalt)
+add_executable(test2 test2.cpp)
+target_link_libraries(test2 basalt)
