--- a/serveur/package.json
+++ b/serveur/package.json
@@ -4,6 +4,7 @@
   "description": "Répertoire qui contient le code du serveur de métrique",
   "main": "src/server.ts",
   "dependencies": {
+    "charts.css": "^0.9.0",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
