storing ip:port from client address not from bootstrap_req

--- a/bootstrap_server/Makefile
+++ b/bootstrap_server/Makefile
@@ -1,10 +1,13 @@
 CFLAGS=-g -Wall -std=gnu99
 LDFLAGS=-lpthread
 
-all: bootstrap_server
+all: bootstrap_server client
 
-bootstrap_server : bootstrap_server.c bootstrap.o ip.o socket_IO.o attack.o
+bootstrap_server : bootstrap_server.c exchange_protocol.h bootstrap.o ip.o socket_IO.o attack.o
 	gcc $(CFLAGS) -o bootstrap_server bootstrap_server.c bootstrap.o ip.o socket_IO.o attack.o
+
+client : Node.c exchange_protocol.h socket_IO.o
+	gcc $(CFLAGS) -o client Node.c socket_IO.o
 
 socket_IO.o : socket_IO.c socket_IO.h
 	gcc $(CFLAGS) -o socket_IO.o -c socket_IO.c
