--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -64,50 +64,13 @@ USER root
 # CMD is the default command that is going to be executed in the startup of every exection.
 # Only the last one is considered. So use it once.
 CMD \
-#whoami;\
 su peer < /etc/ansibleconf.sh; \
-#su peer;\
-#whoami;\
-#Ansible configuration
-# cd ~;\
-# pwd ;\
-# ls; \
-# echo "basalt" > password.txt; \
-# ls;\
-# mkdir .ssh; \
-# cd .ssh;\
-# ssh-keygen -t rsa -f "/home/peer/.ssh/id_rsa" -q -P "" > /dev/null; \
-# sshpass -f password.txt ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" -o StrictHostKeyChecking=no peer@172.17.0.2 > /dev/null 2> /dev/null; \
-# sshpass -f password.txt ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" -o StrictHostKeyChecking=no peer@172.17.0.3 > /dev/null 2> /dev/null; \
 cd ~;\
 #Launch the Launcher 
 mkdir basalt_project; \
 cd basalt_project; \
 cp -r /home/dev/bootstrap_server ./; \
 cd bootstrap_server/bootstrap/; \
-#npm install > /dev/null; \
-#npm run start ; \
-# TEST LAUNCHER DIRECT
-# cd ~/basalt_project/bootstrap_server/; \
-# chmod ugo+rwx launcher.sh;\
-# ./launcher.sh --port 8082 --machine peer 172.17.0.2 33 --machine peer 172.17.0.3 33 --machine peer 172.17.0.4 33 --attack eclipse 1 50 --attack inst 2 20 8 --info --taille_vue 11 --nb_cycle_reset 12 --nb_reset 23 --nb_cycle_sec 34; \
-#cp  /home/dev/project_example.c project_example.c; \
-#cp  /home/dev/Makefile Makefile; \
-#zip /home/peer/basalt_project/src.zip project_example.c Makefile > /dev/null; \
-# test BASALT ALGO
-# zip -r /home/peer/basalt_project/src.zip bootstrap_server/; \
-# ansible-playbook /home/dev/send_src.yaml; \
-# ansible all -a "bash -c 'cd /home/peer/basalt_project/bootstrap_server; stdbuf -o0 ./bootstrap_server eclipse 1 inst 2 8 1000 > output.txt ;'" & \
-# sleep 2; \
-# ansible all -a "bash -c 'cd /home/peer/basalt_project/bootstrap_server; ./node hosts 8081;'"; \ 
-# ansible all -a "bash -c 'cd /home/peer/basalt_project/bootstrap_server; cat output.txt;'"; \ 
-# # pratic kill process after clic
-# #ansible-playbook /home/dev/kill_process.yaml; \
-# #ansible all -a "echo ""code retour du dernier pgrep est :""$?;'"; \ 
-# echo "yes" > ~/password; \
-# echo "basalt" >> ~/password; \
-# mkdir ~/.ssh; \
-# ssh-keygen -t rsa -f "/home/peer/.ssh/id_rsa" -q -P ""; \
-# ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" peer@172.17.0.2 < ~/password; \
-# ssh-copy-id -i "/home/peer/.ssh/id_rsa.pub" peer@172.17.0.3 < ~/password; \
+npm install > /dev/null; \
+npm run start ; \
 bash
