--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(basalt VERSION 0.1)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+if(!win32)
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")    
+endif(!win32)
+
 add_subdirectory(core)
 include_directories(core/include)
 
