honest_node init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif(!win32)
 
 add_subdirectory(core)
 include_directories(core/include)
+include_directories(bootstrap_server)
 
 add_executable(honest_node honest_node.cpp)
 target_link_libraries(honest_node basalt)
