changed bin dir for cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,7 @@ add_subdirectory(core)
 include_directories(core/include)
 include_directories(bootstrap_server)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+
 add_executable(honest_node honest_node.cpp)
 target_link_libraries(honest_node basalt)
