created malicious node + made logger optionnal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
 
 add_executable(honest_node honest_node.cpp)
 target_link_libraries(honest_node basalt)
+add_executable(malicious_node malicious_node.cpp)
+target_link_libraries(malicious_node byzantine_basalt)
