--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required(VERSION 3.2)
 project(basalt VERSION 0.1)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-
+if(UNIX)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")    
+message("Compiling for linux")    
+endif(UNIX)
+
 
 
 add_subdirectory(core)
