--- a/launcher/package.json
+++ b/launcher/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "babel-preset-latest": "^6.24.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "node": "^17.7.2",
     "open": "^8.4.0",
     "require": "^2.4.20"
   },
-  "devDependencies": {},
   "description": ""
 }
