added bootstrap server to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,16 @@ add_subdirectory(core)
 include_directories(core/include)
 include_directories(bootstrap_server)
 
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+
+add_executable(bootstrap_server
+./bootstrap_server/attack.c
+./bootstrap_server/bootstrap_server.c
+./bootstrap_server/bootstrap.c
+./bootstrap_server/ip.c
+./bootstrap_server/socket_IO.c
+)
 
 add_executable(honest_node honest_node.cpp)
 target_link_libraries(honest_node basalt)
