--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -48,11 +48,7 @@ RUN pip3 install ansible paramiko argcomplete;
 RUN  apt-get -y install sudo;
 
 # --- mongodb
-RUN \
-    wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | sudo apt-key add - ; \
-    echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/5.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-5.0.list; \
-    sudo apt-get update; \
-    sudo apt-get install -y mongodb-org;
+RUN apt-get install -y mongodb > /dev/null;
 
 # launched at a service at the start up of launcher server
 
