putting bins in the right path directly after compilation

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -86,6 +86,7 @@ RUN \
     rm -rf /home/Projet_S8/build; \
     cd /home/Projet_S8/; cmake -B build/ > /dev/null; cmake --build build/ > /dev/null; \
     cp /home/Projet_S8/bootstrap_server/bin/bootstrap_server /home/Projet_S8/bin/bootstrap_server; \
+    cp -r /home/Projet_S8/bin/ /home/peer/bin/; \
     cd /home/Projet_S8/launcher/; npm install > /dev/null; \
     cd /home/Projet_S8/serveur/; npm install > /dev/null;
 
